[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "aiowebostv"
version = "0.0.0"
license = "Apache-2.0"
description="Library to control webOS based LG TV devices"
readme = "README.md"
authors = [{ name = "Home Assistant Team", email = "hello@home-assistant.io" }]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Home Automation",
]
dependencies = [
  "aiohttp>=3.11",
]

[project.urls]
"Source code" = "https://github.com/home-assistant-libs/aiowebostv"

[tool.mypy]
python_version = "3.11"
show_error_codes = true
follow_imports = "silent"
ignore_missing_imports = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true

[tool.ruff]
target-version = "py311"

lint.select = ["ALL"]

lint.ignore = [
    "COM812",   # Trailing comma missing (conflicts with formatter)
    "D203",     # 1 blank line required before class docstring (conflicts with `no-blank-line-before-class` (D211))
    "D213",     # Multi-line docstring summary should start at the second line (conflicts with multi-line-summary-first-line` (D212))
    "TC006",    # Add quotes to type expression in `typing.cast()`
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = [
    "T201",     # `print` found
    "T203",     # `pprint` found
]

[tool.tox]
legacy_tox_ini = """

[tox]
envlist = py311, py312, py313, lint, mypy
skip_missing_interpreters = True

[gh-actions]
python =
  3.11: py311, lint, mypy
  3.12: py312
  3.13: py313

[testenv:lint]
basepython = python3
ignore_errors = True
commands =
  ruff format --check ./
  ruff check ./
  pydocstyle aiowebostv
deps =
  -rrequirements.txt
  -rrequirements_lint.txt

[testenv:mypy]
basepython = python3
ignore_errors = True
commands =
  mypy aiowebostv
deps =
  -rrequirements.txt
  -rrequirements_lint.txt
"""
